--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
     border-left-width: 0px;
     border-right-width: 0px;
     border-color: black;
-	padding: 60px;
+	padding: 0px;
 	margin: 0px;
   font-family: "Lato", sans-serif;
 }
@@ -148,7 +148,7 @@ width:auto; }
   <a href="contact.html">Contact</a>
     <a href="skills.html">Skills</a>
 </div></div>
-  <div style="width:80%;"><div class="main">
+  <div style="width:80%;  padding-right: 60px;"><div class="main">
 	<h1>Yordanos Mathewos</h1>
   <p style="text-align:center;">Software Engineer |NYC| Experience Architect&nbsp; &nbsp; &nbsp;</p>
   <p style="text-align:center; "><strong>I Build, Create &amp;&nbsp; Facilitate with Love.&nbsp; &nbsp;</strong></p>
