--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ width:auto; }
 </head>
 <body>
 <div class="flex-cont">
-  <div style="width:20%;"><div class="sidenav">
+  <div style="width:15%;"><div class="sidenav">
  <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <a href="portfolio.html" target="_blank">Portfolio</a>
@@ -148,7 +148,7 @@ width:auto; }
   <a href="contact.html">Contact</a>
     <a href="skills.html">Skills</a>
 </div></div>
-  <div style="width:80%;  padding-leftt: 60px;"><div class="main">
+  <div style="width:85%;  padding-left: 60px;"><div class="main">
 	<h1>Yordanos Mathewos</h1>
   <p style="text-align:center;">Software Engineer |NYC| Experience Architect&nbsp; &nbsp; &nbsp;</p>
   <p style="text-align:center; "><strong>I Build, Create &amp;&nbsp; Facilitate with Love.&nbsp; &nbsp;</strong></p>
