--- a/portfolio.html
+++ b/portfolio.html
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/app3.jpeg" alt="">
+                        <img class="card-img-top" src="Screenshot_1590036420.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">This Thing</h5>
                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
