--- a/portfolio.html
+++ b/portfolio.html
@@ -136,7 +136,7 @@
                             <a href="" class="btn btn-outline-success btn-sm">Coming Soon</a>
                             <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
                         </div>
-          
+                    </div>
                 </div>
             </div>
        </div>
