--- a/portfolio.html
+++ b/portfolio.html
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/app2.jpeg" alt="">
+                        <img class="card-img-top" src="imgs/app2.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Other Thing</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
